This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-06-12:

- Fixed a bug where ^X^E in emacs or 'v' in vi, which invoke a full-screen
  editor to edit the command line, could cause the wrong command line to be
  edited if two shell sessions share a .sh_history file.

- In the emacs line editor, ^X^E no longer echos the hist command it invokes.

2023-06-10:

- Ksh can now compile on most operating systems when using -std=c99 in CCFLAGS.

2023-06-09:

- Fixed a bug where the 'break' and 'continue' commands stopped working after
  changing scope levels (.sh.level=n) within a loop invoked from a DEBUG trap.

2023-06-07:

- Release 1.0.5.

2023-06-05:

- Fixed a bug in command completion: when a shell built-in or defined function
  was preceded in alphabetical order by an undefined function (on FPATH or
  after 'autoload'), the built-in or defined function failed to tab-complete.

2023-06-04:

- Fixed a bug in 'case', introduced in ksh 93t 2008-10-31, where extended
  patterns containing a closing brace ('}') caused a spurious syntax error.

- The POSIX mode was amended to make 'test -e /dev/fd/n' (where n is a file
  descriptor number) actually test for the existence of /dev/fd/n in the
  file system. By default it tests if that file descriptor is open.

2023-06-02:

- Fixed a bug introduced on 2021-04-24 where unsetting a function in a
  subshell hides any built-in command by the same name for the duration
  of that subshell.

2023-05-30:

- Fixed a bug in the 'type -t'/'whence -t' output for an undefined function.

- The autoloadable directory stack and menu-based cd functions in the 'fun'
  directory have been reorganised and fixed to play well together when that
  directory is added to FPATH.

2023-05-29:

- Fixed a bug in bracket expressions in glob patterns where quoting a '!'